# kairoa

./: README.md  README_zh.md  package-lock.json  package.json
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/components/: Sidebar.svelte
src/lib/stores/: i18n.ts
src/routes/: +page.svelte
src/routes/api-client/: +page.svelte
src/routes/crypto/: +page.svelte
src/routes/encode-decode/: +page.svelte
src/routes/jwt/: +page.svelte
src/routes/previewer/: +page.svelte
src/routes/qr-code/: +page.svelte
