[package]
name = "kairoa"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kairoa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
dsa = "0.6"
der = { version = "0.7", features = ["alloc"] }
rand = "0.8"
pkcs8 = { version = "0.10", features = ["pem", "alloc"] }
signature = "2.2"
sha2 = "0.10"
hex = "0.4"
# Password hashing
pbkdf2 = { version = "0.12", features = ["simple"] }
scrypt = { version = "0.11", features = ["simple"] }
bcrypt = "0.15"
argon2 = "0.5"

